# EdgeBoard_Experience

./: 【EdgeBoard体验】aistudio在线训练Paddle模型部署到板卡.md  【EdgeBoard体验】开箱与上手.md
src/W2/: week2.md
src/W2/code/FPGA_EdgeBoard/sample_image_catdog/include/: fautil.h  fn2mat.h  fpga_cv.hpp  paddle_include.h  protocol.h  thread.h
src/W2/code/FPGA_EdgeBoard/sample_image_catdog/model/mlp/: label_list.txt
src/W2/code/PC/: train.py
src/Week2/code/FPGA_EdgeBoard/sample_image_catdog/: CMakeLists.txt
src/Week2/code/FPGA_EdgeBoard/sample_image_catdog/include/: ._fautil.h  BlockQueue.h  Capturer.hpp  dev_common.h  half.h  paddle_interface.h  ssd_detect.hpp
src/Week2/code/FPGA_EdgeBoard/sample_image_catdog/include/paddle-mobile/fpga/KD/pes/: scale_pe.hpp
src/Week2/code/FPGA_EdgeBoard/sample_image_catdog/model/mlp/: ._label_list.txt  model  params
src/Week2/code/FPGA_EdgeBoard/sample_image_catdog/src/: fpga_cv.cpp  main.cpp
src/Week2/code/PC/: predict.py
